# decent

RSA_CarTrinket/: CMakeLists.txt  README.md  main.cpp
RandomVariant/: kek.txt
firsthw/: README.md  solution.cpp
secondhw/: CMakeLists.txt  README.md  main.cpp
